<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/imageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/imageDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date" />

            <ImageView
                android:id="@+id/imageDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/Title"
                android:src="@drawable/kazan041" />

            <TextView
                android:id="@+id/imageDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0"
        android:background="#FF8D8D8D"
        android:gravity="center"
        android:padding="5dp" >

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRefresh"
            android:text="@string/Refresh" />

        <Button
            android:id="@+id/wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSetWallpaper"
            android:text="@string/SetWallpaper" />

    </LinearLayout>

</LinearLayout>